--- a/src/assets/scss/layouts/_home.scss
+++ b/src/assets/scss/layouts/_home.scss
@@ -9,11 +9,6 @@
 
 	.title {
 		margin:0 0 25px 0;
-    padding-top:48vw;
-
-		@include breakpoint(narrow){
-			padding-top: 0;
-		}
 
 		h1 {
 			font-weight: 700;
